# padic-kernel

./: pyproject.toml
notebook/: divMod for fixed point arithmetic.ipynb  haskell_basics.ipynb  padic-FP.ipynb  padic.ipynb  playgound_padic.ipynb  string_kernel.ipynb
src/: padic.py
test/: test_padic.py
